--- a/STLTest/STLTest.vcxproj.filters
+++ b/STLTest/STLTest.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="STLTest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="소스.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
